# gemini

./: .gitignore  README.md  app.py  gemini.py  package.json  pyproject.toml  requirements.txt  sync.ps1
backend/: main.py  requirements.txt
backend/config/: settings.py
backend/routers/: generate.py
backend/services/: error_utils.py  gemini_client.py  generation_jobs.py  generation_service.py  image_service.py  mime_utils.py
components/: deep_research.py  gemini_chat.py  image_generator.py
config/: prompts.py  settings.py  styles.py
docs/: heroku-mvp.md
docs/plans/: 2026-02-19-refactoring-design.md  2026-02-19-refactoring-implementation.md  2026-02-26-gemini-model-separation-design.md  2026-02-26-gemini-model-separation-implementation.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: controls-row.tsx  header.tsx  prompt-section.tsx  reference-upload.tsx  result-section.tsx
frontend/lib/: api.ts  types.ts
gemini_image_generator/: __init__.py  client.py  config.py  file_utils.py  research_agent.py  telegram_utils.py
services/: chat_service.py  error_utils.py  gemini_client.py  image_service.py  mime_utils.py  research_service.py  telegram_service.py
tests/: check_image_models.py
tests/unit/: test_generate_api.py  test_generation_service.py  test_image_service.py
