[project]
name = "gemini-hub"
version = "0.1.0"
description = "Веб-додаток   Gemini Hub для генерації зображень за допомогою Google Gemini API для  "
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.5.4",
    "google-genai>=1.65.0",
    "Pillow>=12.0.0",
    "python-telegram-bot>=22.5",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_image_generator"]

